--- a/src/ConsoleClient/ConsoleClient.csproj
+++ b/src/ConsoleClient/ConsoleClient.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="identitymodel" Version="7.0.0" />
+        <PackageReference Include="spectre.console" Version="0.49.1" />
     </ItemGroup>
 
 </Project>
